--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ autobahn==0.16.0
 autopep8==1.2.4
 Django==2.2.5
 django-crispy-forms==1.7.2
+django-filter==2.2.0
+django-filters==0.2.1
 pep8==1.7.0
 Pillow==6.2.0
 pytz==2019.2
